--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ dependencies = [
   "pandas>=2.2,<3",
   "pydantic>=2.6,<3",
   "pyyaml>=6.0,<7",
+  "gymnasium>=0.29,<1",
+  "stable-baselines3>=2.3,<3",
+  "torch>=2.2,<3",
 ]
 
 [project.optional-dependencies]
