--- a/src/coin_trading/config/default.yaml
+++ b/src/coin_trading/config/default.yaml
@@ -29,3 +29,19 @@ split:
   train: ["2022-01-01", "2024-12-31"]
   val: ["2025-01-01", "2025-06-30"]
   test: ["2025-07-01", "2025-12-31"]
+
+train:
+  algo: ppo
+  total_timesteps: 8192
+  learning_rate: 0.0003
+  batch_size: 64
+  gamma: 0.99
+  n_steps: 128
+  seed: null
+  eval_interval: 256
+  early_stop: 3
+  checkpoint_interval: 1024
+  min_train_rows: 2000
+  min_val_rows: 500
+  min_test_rows: 500
+  resume_from: null
