--- a/src/coin_trading/config/default.yaml
+++ b/src/coin_trading/config/default.yaml
@@ -52,6 +52,9 @@ train:
   seed: null
   eval_interval: 256
   walkforward_runs: 3
+  walkforward_adjustment_scenario: auto  # auto | extend_data | reduce_val_test | off
+  walkforward_shortfall_policy: warn_and_continue  # warn_and_continue | abort
+  walkforward_extend_days: 0
   early_stop: 3
   checkpoint_interval: 512
   resume_from: null
